[package]
name = "rust_hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. 异步核心
tokio = { version = "1", features = ["full"] }

# 2. 网络连接 (WebSocket)
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# 3. 数据处理 (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 4. 配置读取
dotenv = "0.15"

# 5. 加密鉴权 (HMAC-SHA256 核心)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# 6. 工具
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
url = "2.4"


# 代理隧道工具
async-http-proxy = { version = "1.2", features = ["runtime-tokio"] }

# TLS 加密工具 (用于在代理通道内建立安全连接)
native-tls = "0.2"
tokio-native-tls = "0.3"


